--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "track-cli",
+  "name": "cybertrack-cli",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "bin": {
-    "track": "./bin/track",
-    "track-cli": "./bin/track"
+    "cybertrack": "./bin/cybertrack",
+    "cybertrack-cli": "./bin/cybertrack"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,11 +17,11 @@
   ],
   "keywords": [
     "cli",
-    "track-cli",
+    "cybertrack-cli",
     "脚手架"
   ],
   "author": {
-    "name": "track",
+    "name": "cybertrack",
     "email": "niuguozhen@outlook.com"
   },
   "license": "ISC",
